Time: 28 ms (94.09%), Space: 134.2 MB (8.32%) - LeetHub